[package]
name = "nbfm-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
num-complex = "0.4.5"
plotters = "0.3.5"
rustfft = "6.2.0"
signalbool = "0.2.5"
simple_moving_average = "1.0.2"
soapysdr = "0.4.0"
waveform = "0.3.2"
wavegen = "0.4.1"
nbfm-monitor-ui = { path = "../nbfm-monitor-ui" }
